--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -556,14 +556,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				<div class="next-img-seven">
 					<img src="./assets/img/next.png" alt="">
 				</div>
-				<div class="option-one-seven" id="accident1" data-index="1" onclick="sevenAccident(this)">これまで事故をしたことはない
-				</div>
-				<div class="option-one-seven" id="accident2" data-index="2" onclick="sevenAccident(this)">駐⾞場でぶつけた /
-					縁⽯で擦った程度の軽い事故</div>
-				<div class="option-one-seven" id="accident3" data-index="3" onclick="sevenAccident(this)">居眠り運転をしたことがある
-				</div>
-				<div class="option-one-seven" id="accident4" data-index="4" onclick="sevenAccident(this)">⼈⾝事故を起こしたことがある
-				</div>
+				<div class="option-one-seven" id="accident1" data-index="1" onclick="sevenAccident(this)">これまで事故をしたことはない</div>
+				<div class="option-one-seven" id="accident2" data-index="2" onclick="sevenAccident(this)">駐⾞場でぶつけた/縁⽯で擦った程度の軽い事故</div>
+				<div class="option-one-seven" id="accident3" data-index="3" onclick="sevenAccident(this)">居眠り運転をしたことがある</div>
+				<div class="option-one-seven" id="accident4" data-index="4" onclick="sevenAccident(this)">⼈⾝事故を起こしたことがある</div>
 			</div>
 			<div class="nearest-description">
 				<div class="common-img">
