7/10 hubspot用の配列を修正

--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -284,7 +284,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				<div class="option-one" id="f5" data-index="5" onclick="fourClick(this)">副業ができる会社で働きたいから</div>
 				<div class="option-one" id="f6" data-index="6" onclick="fourClick(this)">⾃宅から近い会社で働きたいから</div>
 				<div class="option-one" id="f7" data-index="7" onclick="fourClick(this)">今の仕事を中⻑期的に続けるイメージができないから</div>
-				<div class="option-one" id="f8" data-index="8" onclick="fourClick(this)">間関係に疲れてしまったから</div>
+				<div class="option-one" id="f8" data-index="8" onclick="fourClick(this)">人間関係に疲れてしまったから</div>
 			</div>
 
 			<div class="next">
@@ -556,14 +556,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				<div class="next-img-seven">
 					<img src="./assets/img/next.png" alt="">
 				</div>
-				<div class="option-one-seven" id="accident1" data-index="1" onclick="sevenAccident(this)">これまで事故をしたことはない
-				</div>
-				<div class="option-one-seven" id="accident2" data-index="2" onclick="sevenAccident(this)">駐⾞場でぶつけた /
-					縁⽯で擦った程度の軽い事故</div>
-				<div class="option-one-seven" id="accident3" data-index="3" onclick="sevenAccident(this)">居眠り運転をしたことがある
-				</div>
-				<div class="option-one-seven" id="accident4" data-index="4" onclick="sevenAccident(this)">⼈⾝事故を起こしたことがある
-				</div>
+				<div class="option-one-seven" id="accident1" data-index="1" onclick="sevenAccident(this)">これまで事故をしたことはない</div>
+				<div class="option-one-seven" id="accident2" data-index="2" onclick="sevenAccident(this)">駐⾞場でぶつけた/縁⽯で擦った程度の軽い事故</div>
+				<div class="option-one-seven" id="accident3" data-index="3" onclick="sevenAccident(this)">居眠り運転をしたことがある</div>
+				<div class="option-one-seven" id="accident4" data-index="4" onclick="sevenAccident(this)">⼈⾝事故を起こしたことがある</div>
 			</div>
 			<div class="nearest-description">
 				<div class="common-img">
@@ -655,7 +651,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			</div>
 			<div class="last-name">
 				<div class="last-input">
-					<input type="text" inputmode="numeric" pattern="\d*" class="custom-phone-input" id="phone_number" placeholder="例：03-6825-2404">
+					<input type="text" name="phone" inputmode="numeric" pattern="\d*" class="custom-phone-input" id="phone_number" placeholder="例：03-6825-2404">
 				</div>
 
 			</div>
@@ -665,7 +661,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			</div>
 			<div class="last-name">
 				<div class="last-input">
-					<input type="text" class="custom-phone-input" id="email" placeholder="例：advisor@anytrai.jp">
+					<input type="text" name="email" class="custom-phone-input" id="email" placeholder="例：advisor@anytrai.jp">
 				</div>
 
 				<div class="phoneInputError" id="phoneInputError">
@@ -686,7 +682,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			<div class="next">
 				<span class="next-button" id="last-before" onclick="gotoSeven()">< 戻る</span>
 
-				<span class="next-button" id="last-next" onclick="completeStep()">登録する</span>
+				<span class="next-button" id="last-next" onclick="completeStep()">送信する</span>
 				<div class="next-seven-img" id="">
 					<img src="./assets/img/next.png" alt="">
 				</div>
