--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -513,6 +513,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			</div>
 			<div class="next-newstep">
 				<span class="next-button" id="six-before" onclick="gotoSix()">< 戻る</span>
+				<span class="next-button" id="six-next" onclick="newStepHidden()">次へ</span>
 			</div>
 		</div>
 		<div class="seven" id="seven">
