7/10 ルートディレクトリのLPのデザインを修正

--- a/registration/index.html
+++ b/registration/index.html
@@ -606,6 +606,9 @@
                 <p id="valid_email" class="d-none">
                   有効なメールアドレスを入力してください。
                 </p>
+                <p id="please_enter_email" class="d-none">
+                  入力してください
+                </p>
               </div>
               <div class="item item-privacy">
                 <label class="form-label required"
