--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -117,16 +117,16 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			</div>
 			<div class="second-three-check">
 				<div class="second-three-check-one">
-					<div class="red-taxi browsee-step1-finished" id="redtaxi" onclick="secondCheck1()">
+					<div class="red-taxi" id="redtaxi" onclick="secondCheck1()">
 						<img src="./assets/img/red-taxi.png" alt="">
 						<span id="red-taxi">普通免許</span>
 					</div>
-					<div class="black-taxi browsee-step1-finished" id="blacktaxi" onclick="secondCheck2()">
+					<div class="black-taxi" id="blacktaxi" onclick="secondCheck2()">
 						<img src="./assets/img/black-taxi.png" alt="">
 						<span id="black-taxi">⼆種免許</span>
 					</div>
 				</div>
-				<div class="no-license browsee-step1-finished" id="nolicense" onclick="secondCheck3()">
+				<div class="no-license" id="nolicense" onclick="secondCheck3()">
 					<img src="./assets/img/nolicense.png" alt="">
 					<span id="no-license">免許は持っていない</span>
 				</div>
@@ -191,13 +191,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 			<div class="third-five-part">
 				<div class="third-one">
-					<div class="third-cycle browsee-step2-finished" id="plane" data-index="1" onclick="thirdCheck(this)">
+					<div class="third-cycle" id="plane" data-index="1" onclick="thirdCheck(this)">
 						<div class="third-img">
 							<img src="./assets/img/plane.png" alt="">
 						</div>
 						<span class="third-span" id="plane-content">直ぐにでも</span>
 					</div>
-					<div class="third-cycle browsee-step2-finished" id="train" data-index="2" onclick="thirdCheck(this)">
+					<div class="third-cycle" id="train" data-index="2" onclick="thirdCheck(this)">
 						<div class="third-img">
 							<img src="./assets/img/train.png" alt="">
 						</div>
@@ -208,20 +208,20 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					</div>
 				</div>
 				<div class="third-two">
-					<div class="third-cycle browsee-step2-finished" id="bus" data-index="3" onclick="thirdCheck(this)">
+					<div class="third-cycle" id="bus" data-index="3" onclick="thirdCheck(this)">
 						<div class="third-img">
 							<img src="./assets/img/bus.png" alt="">
 						</div>
 						<span class="third-span" id="bus-content">3ヶ⽉以内</span>
 					</div>
-					<div class="third-cycle browsee-step2-finished" id="bike" data-index="4" onclick="thirdCheck(this)">
+					<div class="third-cycle" id="bike" data-index="4" onclick="thirdCheck(this)">
 						<div class="third-img">
 							<img src="./assets/img/bike.png" alt="">
 						</div>
 						<span class="third-span" id="bike-content">半年以内</span>
 					</div>
 				</div>
-				<div class="third-three browsee-step2-finished" id="rickshaw" data-index="5" onclick="thirdCheck(this)">
+				<div class="third-three" id="rickshaw" data-index="5" onclick="thirdCheck(this)">
 					<div class="third-img">
 						<img src="./assets/img/old.png" alt="">
 					</div>
@@ -290,7 +290,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			<div class="next">
 				<span class="next-button" id="third-before" onclick="gotoThird()">< 戻る</span>
 
-				<span class="next-button browsee-step3-finished disabled" id="four-next" onclick="fourHidden()">次へ</span>
+				<span class="next-button disabled" id="four-next" onclick="fourHidden()">次へ</span>
 
 			</div>
 		</div>
@@ -357,7 +357,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			<div class="next">
 				<span class="next-button" id="five-before" onclick="gotoFour()">< 戻る</span>
 
-				<span class="next-button browsee-step4-finished disabled" id="five-next" onclick="fiveHidden()">次へ</span>
+				<span class="next-button disabled" id="five-next" onclick="fiveHidden()">次へ</span>
 
 			</div>
 		</div>
@@ -445,7 +445,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			<div class="next-six">
 				<span class="next-button" id="six-before" onclick="gotoFive()">< 戻る</span>
 
-				<span class="next-button browsee-step5-finished disabled" id="six-next" onclick="sixHidden()">次へ</span>
+				<span class="next-button disabled" id="six-next" onclick="sixHidden()">次へ</span>
 
 			</div>
 		</div>
@@ -513,7 +513,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			</div>
 			<div class="next-newstep">
 				<span class="next-button" id="six-before" onclick="gotoSix()">< 戻る</span>
-				<span class="next-button browsee-step6-finished" id="six-next" onclick="newStepHidden()">次へ</span>
+				<span class="next-button" id="six-next" onclick="newStepHidden()">次へ</span>
 			</div>
 		</div>
 		<div class="seven" id="seven">
@@ -576,7 +576,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			<div class="next">
 				<span class="next-button" id="seven-before" onclick="gotoNewStep()">< 戻る</span>
 
-				<span class="next-button browsee-step7-finished disabled" id="seven-next" onclick="sevenHidden()">次へ</span>
+				<span class="next-button disabled" id="seven-next" onclick="sevenHidden()">次へ</span>
 
 			</div>
 		</div>
@@ -683,7 +683,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			<div class="next">
 				<span class="next-button" id="last-before" onclick="gotoSeven()">< 戻る</span>
 
-				<span class="next-button browsee-complete-step8" id="last-next" onclick="completeStep()">送信する</span>
+				<span class="next-button" id="last-next" onclick="completeStep()">送信する</span>
 				<div class="next-seven-img" id="">
 					<img src="./assets/img/next.png" alt="">
 				</div>
