canonicalタグでURLを正規化

--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -11,7 +11,6 @@
 	<title>タクシー転職するなら【タクシーメイト】に登録｜タクシーメイト</title>
 	<meta name="description" content="タクシーの求人・転職情報をお探しなら一都三県で豊富な実績のある「タクシーメイト」。タクシー業界を知り尽くしたキャリアアドバイザーがあなたの転職をサポートします。">
 	<meta name="keywords" content="タクシーメイト,タクシー,ドライバー,求人,転職">
-	<link rel="canonical" href="https://taxi-mate.jp/"> <!-- /taxi-mate.jp, /taxi-mate.jp/index.html でアクセスされても /taxi-mate.jp/ が正規だという記載 -->
 	<link rel="icon" href="../images/favicons/favicon.ico">
 
 	<!-- Google Tag Manager -->
@@ -36,6 +35,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/animatecss/3.5.2/animate.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 	<script src="./assets/js/script.js"></script>
+	<link rel="canonical" href="https://taxi-mate.jp/lp-1/"> <!-- /taxi-mate.jp, /taxi-mate.jp/index.html でアクセスされても /taxi-mate.jp/ が正規だという記載 -->
 </head>
 
 <body>
