--- a/job/01/index.html
+++ b/job/01/index.html
@@ -34,6 +34,7 @@
 
 	<link rel="stylesheet"
 		href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,100,0,0" />
+	<link rel="canonical" href="https://taxi-mate.jp/job/01/">
 </head>
 
 <body>
