--- a/lp-1/thanks/index.html
+++ b/lp-1/thanks/index.html
@@ -14,6 +14,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-KX8ZQFSX');</script>
     <!-- End Google Tag Manager -->
+    <link rel="canonical" href="https://taxi-mate.jp/lp-1/thanks/">
 </head>
 
 <body>
