二種免許の二の文字が違った

--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -123,7 +123,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					</div>
 					<div class="black-taxi" id="blacktaxi" onclick="secondCheck2()">
 						<img src="./assets/img/black-taxi.png" alt="">
-						<span id="black-taxi">⼆種免許</span>
+						<span id="black-taxi">二種免許</span>
 					</div>
 				</div>
 				<div class="no-license" id="nolicense" onclick="secondCheck3()">
@@ -141,7 +141,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				<div class="common-des">
 					<div class="description-triangle"></div>
 					<div class="description-text">
-						「⼆種免許の取得費⽤」を出している<br>タクシー会社をご紹介します。
+						「二種免許の取得費⽤」を出している<br>タクシー会社をご紹介します。
 					</div>
 				</div>
 			</div>
