lp-1 の選択文字列を変更 hubspotのエラー解消見込み

--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -201,7 +201,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 						<div class="third-img">
 							<img src="./assets/img/train.png" alt="">
 						</div>
-						<span class="third-span" id="train-content">来⽉あたり</span>
+						<span class="third-span" id="train-content">来月あたり</span>
 					</div>
 					<div class="next-img-third">
 						<img src="./assets/img/next.png" alt="">
@@ -212,7 +212,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 						<div class="third-img">
 							<img src="./assets/img/bus.png" alt="">
 						</div>
-						<span class="third-span" id="bus-content">3ヶ⽉以内</span>
+						<span class="third-span" id="bus-content">3ヶ月以内</span>
 					</div>
 					<div class="third-cycle" id="bike" data-index="4" onclick="thirdCheck(this)">
 						<div class="third-img">
@@ -277,13 +277,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				<div class="next-img-four">
 					<img src="./assets/img/next.png" alt="">
 				</div>
-				<div class="option-one" id="f1" data-index="1" onclick="fourClick(this)">収⼊を上げたいから</div>
-				<div class="option-one" id="f2" data-index="2" onclick="fourClick(this)">⾃分のペースで仕事をしたいから</div>
+				<div class="option-one" id="f1" data-index="1" onclick="fourClick(this)">収入を上げたいから</div>
+				<div class="option-one" id="f2" data-index="2" onclick="fourClick(this)">自分のペースで仕事をしたいから</div>
 				<div class="option-one" id="f3" data-index="3" onclick="fourClick(this)">もっとやりがいを感じる仕事をしたいから</div>
 				<div class="option-one" id="f4" data-index="4" onclick="fourClick(this)">正社員になりたいから</div>
 				<div class="option-one" id="f5" data-index="5" onclick="fourClick(this)">副業ができる会社で働きたいから</div>
-				<div class="option-one" id="f6" data-index="6" onclick="fourClick(this)">⾃宅から近い会社で働きたいから</div>
-				<div class="option-one" id="f7" data-index="7" onclick="fourClick(this)">今の仕事を中⻑期的に続けるイメージができないから</div>
+				<div class="option-one" id="f6" data-index="6" onclick="fourClick(this)">自宅から近い会社で働きたいから</div>
+				<div class="option-one" id="f7" data-index="7" onclick="fourClick(this)">今の仕事を中長期的に続けるイメージができないから</div>
 				<div class="option-one" id="f8" data-index="8" onclick="fourClick(this)">人間関係に疲れてしまったから</div>
 			</div>
 
@@ -333,9 +333,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			</div>
 
 			<div class="four-options">
-				<div class="option-one" id="five1" data-index="1" onclick="fiveClick(this)">年収が⾼いから</div>
-				<div class="option-one" id="five2" data-index="2" onclick="fiveClick(this)">⾃分のペースで仕事ができるから</div>
-				<div class="option-one" id="five3" data-index="3" onclick="fiveClick(this)">⼈の役に⽴っている感覚を持てるから</div>
+				<div class="option-one" id="five1" data-index="1" onclick="fiveClick(this)">年収が高いから</div>
+				<div class="option-one" id="five2" data-index="2" onclick="fiveClick(this)">自分のペースで仕事ができるから</div>
+				<div class="option-one" id="five3" data-index="3" onclick="fiveClick(this)">人の役に立っている感覚をもてるから</div>
 				<div class="option-one" id="five4" data-index="4" onclick="fiveClick(this)">シフト制で勤務に融通が効きそうだから</div>
 				<div class="option-one" id="five5" data-index="5" onclick="fiveClick(this)">年齢を重ねても仕事を続けられそうだから</div>
 				<div class="next-img-five">
@@ -426,11 +426,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				<p>通勤⼿段について教えてください(全て)</p>
 			</div>
 			<div class="sixth-one border-b">
-				<div class="option-one" id="sixWay1" data-index="1" onclick="sixWayClick(this)">電⾞</div>
+				<div class="option-one" id="sixWay1" data-index="1" onclick="sixWayClick(this)">電車</div>
 				<div class="option-one" id="sixWay2" data-index="2" onclick="sixWayClick(this)">バス</div>
-				<div class="option-one" id="sixWay3" data-index="3" onclick="sixWayClick(this)">⾃家⽤⾞</div>
+				<div class="option-one" id="sixWay3" data-index="3" onclick="sixWayClick(this)">自家用車</div>
 				<div class="option-one" id="sixWay4" data-index="4" onclick="sixWayClick(this)">バイク</div>
-				<div class="option-one" id="sixWay5" data-index="5" onclick="sixWayClick(this)">⾃転⾞</div>
+				<div class="option-one" id="sixWay5" data-index="5" onclick="sixWayClick(this)">自転車</div>
 				<div class="option-one" id="sixWay6" data-index="6" onclick="sixWayClick(this)">徒歩圏内が良い</div>
 			</div>
 			<div class="common-title">
