【破壊的変更】7/12 ステップ数を減らした。勤務経験の質問を削除

--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -124,7 +124,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			</div>
 			<div class="common-title">
 				<span></span>
-				<p>保有している免許について教えてください</p>
+				<p>まずは保有している免許を教えてください</p>
 			</div>
 			<div class="second-three-check">
 				<div class="second-three-check-one">
@@ -145,6 +145,17 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					<img src="./assets/img/next.png" alt="">
 				</div>
 			</div>
+			<div class="common-description mt-30 mb-30">
+				<div class="common-img">
+					<img src="./assets/img/man.png" alt="">
+				</div>
+				<div class="common-des">
+					<div class="description-triangle"></div>
+					<div class="description-text padding-5-7 auto-height">
+						タクシーメイトは無料の転職支援サービスです。転職に成功した多くの方がご登録しています。
+					</div>
+				</div>
+			</div>
 			<!-- <div class="common-description">
 				<div class="common-img">
 					<img src="./assets/img/man.png" alt="">
@@ -156,10 +167,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					</div>
 				</div>
 			</div> -->
-			<div class="next-second">
+			<!-- <div class="next-second">
 				<span class="next-button" id="second-before" onclick="gotoFirst()">< 戻る</span>
 
-			</div>
+			</div> -->
 		</div>
 		<div class="third" id="third">
 			<div class="second-head">
