logo-white.png を logo-white.webp に変換

--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -47,7 +47,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<div class="header-top">
 			<div>
 				<a href="./" class="header-logo">
-					<img src="./assets/img/logo-white.png" alt="タクシーメイト">
+					<img src="./assets/img/logo-white.webp" alt="タクシーメイト">
 				</a>
 				<!-- <span class="header-top-sm-txt">powered by</span>
 				<img class="anytrail" src="./assets/img/logo-anytrail-white.png.webp" alt="AnyTrail株式会社"> -->
