画像サイズの変更

--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -129,16 +129,16 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			<div class="second-three-check">
 				<div class="second-three-check-one">
 					<div class="red-taxi bg-white" id="redtaxi" onclick="secondCheck1()">
-						<img src="./assets/img/red-taxi.png" alt="">
+						<img src="./assets/img/red-taxi.webp" alt="">
 						<span id="red-taxi">普通免許</span>
 					</div>
 					<div class="black-taxi bg-white" id="blacktaxi" onclick="secondCheck2()">
-						<img src="./assets/img/black-taxi.png" alt="">
+						<img src="./assets/img/black-taxi.webp" alt="">
 						<span id="black-taxi">二種免許</span>
 					</div>
 				</div>
 				<div class="no-license bg-white" id="nolicense" onclick="secondCheck3()">
-					<img src="./assets/img/nolicense.png" alt="">
+					<img src="./assets/img/nolicense.webp" alt="">
 					<span id="no-license">免許は持っていない</span>
 				</div>
 				<div class="next-img-second" id="ani_second">
@@ -147,7 +147,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			</div>
 			<div class="common-description mt-30 mb-30">
 				<div class="common-img">
-					<img src="./assets/img/man.png" alt="">
+					<img src="./assets/img/man.webp" alt="">
 				</div>
 				<div class="common-des">
 					<div class="description-triangle"></div>
